# XcodeBazelMCP

./: .gitignore  .mcp.json  LICENSE  README.md  SECURITY.md  TODO.md  config.example.yaml  eslint.config.js  knip.json  package-lock.json  package.json  server.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.smoke.config.ts  vitest.snapshot.config.ts
.agents/agents/: architecture.md  gotchas.md  testing.md
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: app-path-and-bundle-id.md  bazel-clean.md  config-and-defaults.md  daemon.md  deps-and-rdeps.md  device-support.md  lldb-debugging.md  log-capture.md  macos-targets.md  open-url.md  privacy.md  project-scaffolding.md  push-notification.md  screenshot.md  self-update.md  simulator-build-run-launch.md  simulator-management.md  status-bar.md  stop-app.md  streaming-output.md  swift-package.md  test-coverage.md  test-plan.md  tvos-watchos-visionos.md  ui-automation.md  video-recording.md  workflow-discovery.md  xcode-native-mcp.md
example_projects/BazelApp/: BUILD.bazel  README.md
example_projects/BazelApp/mac/: BUILD.bazel
example_projects/BazelApp/mac/Tests/: MacTests.swift
example_projects/BazelApp/mac/source/: MacApp.swift  MacContentView.swift
manifests/: codex.json
schemas/structured-output/: tool-result.schema.json
scripts/: smoke.mjs
skills/xcodebazelmcp/: SKILL.md
src/: cli.test.ts  cli.ts  doctor-cli.ts
(+78 files in other folders)
